[tool.poetry]
name = "maelstrom-python"
version = "0.1.0"
description = ""
authors = ["Kafonek <matt.kafonek@noteable.io>"]
readme = "README.md"
packages = [{include = "maelstrom_python"}]

[tool.poetry.dependencies]
python = "^3.8"
structlog = "^23.1.0"
pydantic = "^1.10.7"
devtools = "^0.11.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100